// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services queries fetches the agent status 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
      "metric",
      "transaction",
    ],
  },
  "body": Object {
    "size": 0,
  },
  "terminate_after": 1,
}
`;

exports[`services queries fetches the service agent name 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
      "transaction",
      "metric",
    ],
  },
  "body": Object {
    "_source": Array [
      "agent.name",
      "service.runtime.name",
    ],
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "exists": Object {
              "field": "agent.name",
            },
          },
        ],
        "should": Object {
          "exists": Object {
            "field": "service.runtime.name",
          },
        },
      },
    },
    "size": 1,
    "sort": Object {
      "_score": Object {
        "order": "desc",
      },
    },
  },
  "terminate_after": 1,
}
`;

exports[`services queries fetches the service items 1`] = `
Array [
  Object {
    "apm": Object {
      "events": Array [
        "transaction",
      ],
    },
    "body": Object {
      "aggs": Object {
        "sample": Object {
          "aggs": Object {
            "services": Object {
              "aggs": Object {
                "transactionType": Object {
                  "aggs": Object {
                    "avg_duration": Object {
                      "avg": Object {
                        "field": "transaction.duration.us",
                      },
                    },
                    "environments": Object {
                      "terms": Object {
                        "field": "service.environment",
                      },
                    },
                    "outcomes": Object {
                      "terms": Object {
                        "field": "event.outcome",
                        "include": Array [
                          "failure",
                          "success",
                        ],
                      },
                    },
                    "sample": Object {
                      "top_metrics": Object {
                        "metrics": Array [
                          Object {
                            "field": "agent.name",
                          },
                        ],
                        "sort": Object {
                          "@timestamp": "desc",
                        },
                      },
                    },
                  },
                  "terms": Object {
                    "field": "transaction.type",
                  },
                },
              },
              "terms": Object {
                "field": "service.name",
                "size": 50,
              },
            },
          },
          "random_sampler": Object {
            "probability": 1,
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
          ],
        },
      },
      "size": 0,
    },
  },
  Object {
    "apm": Object {
      "events": Array [
        "metric",
        "error",
      ],
    },
    "body": Object {
      "aggs": Object {
        "sample": Object {
          "aggs": Object {
            "services": Object {
              "aggs": Object {
                "environments": Object {
                  "terms": Object {
                    "field": "service.environment",
                  },
                },
                "latest": Object {
                  "top_metrics": Object {
                    "metrics": Array [
                      Object {
                        "field": "agent.name",
                      },
                    ],
                    "sort": Object {
                      "@timestamp": "desc",
                    },
                  },
                },
              },
              "terms": Object {
                "field": "service.name",
                "size": 50,
              },
            },
          },
          "random_sampler": Object {
            "probability": 1,
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
          ],
        },
      },
      "size": 0,
    },
  },
]
`;

exports[`services queries fetches the service transaction types 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "types": Object {
        "terms": Object {
          "field": "transaction.type",
          "size": 100,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
